--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "dotfiles/nvim/.config/nvim"]
 	path = dotfiles/nvim/.config/nvim
-	url = https://github.com/nollidnosnhoj/kickstart.nvim.git
+	url = git@github.com:nollidnosnhoj/kickstart.nvim.git
