add update count to noctalia-shell

--- a/dotfiles/noctalia/.config/noctalia/settings.json
+++ b/dotfiles/noctalia/.config/noctalia/settings.json
@@ -132,6 +132,15 @@
                     "textColor": "none",
                     "useFixedWidth": false,
                     "visualizerType": "linear"
+                },
+                {
+                    "defaultSettings": {
+                        "currentIconName": "world-download",
+                        "hideOnZero": false,
+                        "updateIntervalMinutes": 30,
+                        "updateTerminalCommand": "foot -e"
+                    },
+                    "id": "plugin:update-count"
                 }
             ],
             "right": [
